# jLang

./: .gitattributes  .gitignore  .travis.yml  Makefile  Makefile.in  README.md  ast.cpp  codegen.cpp  compile.sh  configure  configure.ac  cparser.cpp  file.test  grammar.l  handler.cpp  jcode.y  jlang.y  jlang.ypp  lexer.l  main.c  main.cpp  node.h  parse.y  parser.cpp  parser.y  tree.h
src/: Makefile  classes.cpp  codegen.cpp  compile.sh  functions.cpp  handler.cpp  jlang.ypp  lexer.l  loops.cpp  main.cpp  ops.cpp  stdio.cpp  tree.h  vars.cpp
tests/: README.txt  arrayTest.cpp  arrayTest.jl  assignmentTest.jl  castTest.jl  classTest.jl  compile.sh  customOperatorTest.jl  dereferenceTest.jl  dynamicArrayTest.jl  forTest.jl  functionTest.jl  globalTest.jl  ifTest.jl  importTest.jl  itoaTest.jl  jlstdlib.cpp  kernel.jl  kernelTest.jl  mandelbrot.jl  moduleTest.jl  notTest.jl  ptrArithTest.c  ptrArithTest.jl  scopeTest.jl  stdio.jl  stringTest.jl  vecAdd.jl
tutorial/: kscope.cpp  toy.cpp
