AC_INIT(configure)
echo "Testing for a C compiler"
AC_PROG_CC
echo "Testing for a C++ compiler"
AC_PROG_CXX
AC_LANG(C++)
AC_CHECK_HEADERS(iostream)
AC_CHECK_HEADERS(fstream)
AC_CHECK_HEADERS(llvm/Analysis/Passes.h)
AC_CHECK_HEADERS(llvm/Bitcode/ReaderWriter.h)
AC_CHECK_HEADERS(llvm/IR/DataLayout.h)
ACC_CHECK_LIB(boost)
